--- a/prog/conf/kitty/kitty.conf
+++ b/prog/conf/kitty/kitty.conf
@@ -2,7 +2,9 @@
 
 #: Thems {{{
 include kitty-themes/themes/Solarized_Darcula.conf
-background_opacity 0.99
+background_opacity 0.90
+background_blur 10
+linux_display_servers x11
 #:}}}
 
 #: Fonts {{{
@@ -62,6 +64,7 @@ command_on_bell none
 #: }}}
 
 #: Window layout {{{
+confirm_os_window_close 0
 remember_window_size no 
 # initial_window_width  640
 # initial_window_height 480
@@ -122,6 +125,9 @@ map ctrl+a>r combine : load_config_file : launch --type=overlay sh -c 'echo "kit
 map kitty_mod+c  copy_to_clipboard 
 map kitty_mod+v  paste_from_clipboard
 map kitty_mod+s  paste_from_selection
+map cmd+c  copy_to_clipboard 
+map cmd+v  paste_from_clipboard
+map cmd+s  paste_from_selection
 #: }}}
 
 #: Scrolling {{{
