--- a/prog/conf/smb/smb.conf
+++ b/prog/conf/smb/smb.conf
@@ -3,6 +3,7 @@
   server string = Samba Server
   netbios name = roman-pc
   server role = standalone server
+  security = user
 
 ## Логирование
   log file = /var/log/samba/%m.log
@@ -10,7 +11,7 @@
   max log size = 50
 
 ## Ограничение версии протокола
-  ;server min protocol = SMB2_02
+# server min protocol = SMB2_02
   server max protocol = SMB3
 
 ###### Создание ресурсов общего доступа от имени обычного пользователя
@@ -23,16 +24,17 @@
 [pchome]
   comment = PC Directories
   path = /home/roman/
-  usershare max shares = 10
-  public = no
+  valid users = @sambashare
+  guest ok = no
   writable = yes
+  browsable = yes
 
 ## Создание общего ресурса для анонимных пользователей
 [publicshare]
   comment = Publicshare
   path = /home/roman/Public/
-  usershare max shares = 10
-  public = yes
-  only guest = yes
+  browsable =yes
   writable = yes
-  printable = no
+  guest ok = yes
+  read only = no
+  force user = nobody
